--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,9 +4,7 @@
   | default @import url()
   |============================
 */
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -23,3 +21,122 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+
+*,
+*::before,
+*::after {
+           box-sizing: border-box;
+         }
+
+
+    ol, ul{
+            margin: 0;
+            padding-left: 0;
+            list-style-type: none;
+          }
+
+    img{
+         display: block;
+         width: 100%;
+       }
+
+    ul{
+        list-style-type: none;
+      }
+
+        a{
+           text-decoration: none;
+         }
+
+
+body ul{
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 24px;
+  column-gap: 24px;
+  justify-content: center;
+
+}
+.gallery-image{
+  width: 360px;
+height: 200px;
+}
+
+
+.gallery-item{
+  transition: transform 500ms ease-in-out;;
+}
+
+.gallery-item:hover{
+  transform: scale(1.04);
+}
+
+.caption{
+  text-align: center;
+}
+
+
+
+.feedback-form{
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+padding: 24px;
+width: 408px;
+height: 296px;
+background-color: whitesmoke;
+margin: auto;
+}
+
+.feedback-form label{
+  display: flex;
+  flex-direction: column;
+}
+
+.feedback-form input{
+  width: 360px;
+  height: 40px;
+  border-radius: 4px;
+  margin: 8px 0 8px;
+  font-family: "Montserrat", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+}
+
+.feedback-form textarea{
+  width: 360px;
+  height: 80px;
+  border-radius: 4px;
+  margin: 8px 0 16px;
+  resize: none;
+  font-family: "Montserrat", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #2e2f42;
+}
+
+.feedback-form button{
+  border-radius: 8px;
+padding: 8px 16px;
+width: 95px;
+height: 40px;
+background-color: #4e75ff;
+border: none;
+font-family: "Montserrat", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+}
+
+.feedback-form button:hover{
+  background: #6c8cff;
+}
+
