--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,6 +105,8 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #2e2f42;
+border: 1.5px solid;
+outline: none;
 }
 
 .feedback-form textarea{
@@ -119,7 +121,19 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.04em;
 color: #2e2f42;
+border: 1.5px solid;
+outline: none;
 }
+
+.feedback-form input:hover, .feedback-form textarea:hover{
+  border-color: #4e75ff;
+}
+
+.feedback-form input:focus, .feedback-form textarea:focus{
+  border-color: #4e75ff;
+}
+
+
 
 .feedback-form button{
   border-radius: 8px;
